--- a/40MHz_studies/train_and_eval.ipynb
+++ b/40MHz_studies/train_and_eval.ipynb
@@ -30,8 +30,8 @@
    "outputs": [],
    "source": [
     "BETA = 0.5\n",
-    "MODEL_PATH = '/eos/home-m/mmcohen/chop_or_not_development/trained_models/trial_3/'\n",
-    "PLOTS_PATH = MODEL_PATH+'plots'"
+    "MODEL_PATH = '/eos/home-m/mmcohen/chop_or_not_development/trained_models/trial_3'\n",
+    "PLOTS_PATH = MODEL_PATH+'/plots'"
    ]
   },
   {
@@ -385,7 +385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "NERSC Python",
    "language": "python",
    "name": "python3"
   },
@@ -399,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
