remove the feature that sets the weights with those corresponding to the best val loss after training; this feature does not work well with beta annealing, since the val loss can increase as we increase beta.

--- a/40MHz_studies/train_and_eval_1.ipynb
+++ b/40MHz_studies/train_and_eval_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "32b88cb9-4c3e-497c-be72-020a1a83cba1",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-28 19:29:31.372274: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-04-30 01:35:18.710987: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-04-28 19:29:32.856078: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2025-04-30 01:35:24.500739: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost not available. Only neural network student will be used.\n"
      ]
     }
    ],
@@ -23,35 +30,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2278055a-5489-4a99-843a-ff2d061729ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BETA = 0.7\n",
-    "MODEL_PATH = '/global/homes/m/mcohen54/chop_or_not_development/trained_models/trial_9'\n",
-    "PLOTS_PATH = MODEL_PATH+'/plots'\n",
-    "DATA_PATH = MODEL_PATH+'/data'\n",
-    "H_DIM_1 = 16\n",
-    "H_DIM_2 = 8\n",
-    "LATENT_DIM = 3\n",
-    "EPOCHS = 100\n",
     "# ANNEALING_TYPE = 'cyclical'\n",
     "# WARMUP_EPOCHS=None \n",
     "# INCREASE_EPOCHS=None\n",
+    "\n",
+    "BETA = 0.7\n",
+    "MODEL_PATH = '/global/homes/m/mcohen54/chop_or_not_development/trained_models/trial_11'\n",
+    "PLOTS_PATH = MODEL_PATH+'/plots'\n",
+    "DATA_PATH = MODEL_PATH+'/data'\n",
+    "H_DIM_1 = 8\n",
+    "H_DIM_2 = 4\n",
+    "LATENT_DIM = 2\n",
+    "EPOCHS = 25\n",
     "ANNEALING_TYPE = 'standard'\n",
-    "WARMUP_EPOCHS=15\n",
-    "INCREASE_EPOCHS=25\n",
+    "WARMUP_EPOCHS=5\n",
+    "INCREASE_EPOCHS=10\n",
     "LEARNING_RATES = [0.005, 0.002, 0.001, 0.0005, 0.0001]\n",
-    "STAGE_LENGTHS = [20, 20, 25, 20, 15]"
+    "STAGE_LENGTHS = [9, 4, 4, 4, 4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2bd620c0-4582-4e75-ae51-9774dcb2b8bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Booting up...\n",
+      "Starting to load data...\n",
+      "\n",
+      "Loading hChToTauNu_13TeV_PU20.h5...\n",
+      "Loading hToTauTau_13TeV_PU20.h5...\n",
+      "Loading Ato4l_lepFilter_13TeV.h5...\n",
+      "Loading background_for_training.h5...\n",
+      "Loading leptoquark_LOWMASS_lepFilter_13TeV.h5...\n",
+      "Beginning preprocessing...\n",
+      "\n",
+      "Load and preprocessing complete!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "datasets = taef.load_and_preprocess(data_path='/global/homes/m/mcohen54/chop_or_not_development/data', standard_scaler=False)"
    ]
@@ -63,7 +90,65 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing training procedure... booting up...\n",
+      "Using standard beta annealing schedule\n",
+      "Standard schedule phases:\n",
+      "  - Warmup (β=0): 5 epochs\n",
+      "  - Increase (β=0→0.7): 10 epochs\n",
+      "  - Constant (β=0.7): 10 epochs\n",
+      "\n",
+      "Learning rate schedule (5 stages):\n",
+      "  - Stage 1: epochs   0-  8, lr = 0.005000\n",
+      "  - Stage 2: epochs   9- 12, lr = 0.002000\n",
+      "  - Stage 3: epochs  13- 16, lr = 0.001000\n",
+      "  - Stage 4: epochs  17- 20, lr = 0.000500\n",
+      "  - Stage 5: epochs  21- 24, lr = 0.000100\n",
+      "\n",
+      "Initialization attempt 1/100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-30 01:35:56.899583: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 38366 MB memory:  -> device: 0, name: NVIDIA A100-SXM4-40GB, pci bus id: 0000:03:00.0, compute capability: 8.0\n",
+      "2025-04-30 01:35:56.902476: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 38366 MB memory:  -> device: 1, name: NVIDIA A100-SXM4-40GB, pci bus id: 0000:41:00.0, compute capability: 8.0\n",
+      "2025-04-30 01:35:56.904158: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:2 with 38366 MB memory:  -> device: 2, name: NVIDIA A100-SXM4-40GB, pci bus id: 0000:82:00.0, compute capability: 8.0\n",
+      "2025-04-30 01:35:56.906705: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:3 with 38366 MB memory:  -> device: 3, name: NVIDIA A100-SXM4-40GB, pci bus id: 0000:c1:00.0, compute capability: 8.0\n",
+      "2025-04-30 01:35:58.020712: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:637] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully initialized network with valid losses!\n",
+      "\n",
+      "Starting training.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-30 01:35:58.918897: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype float and shape [2000000,57]\n",
+      "\t [[{{node Placeholder/_0}}]]\n",
+      "2025-04-30 01:36:00.691378: I tensorflow/compiler/xla/service/service.cc:169] XLA service 0x7fa604812110 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2025-04-30 01:36:00.691413: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (0): NVIDIA A100-SXM4-40GB, Compute Capability 8.0\n",
+      "2025-04-30 01:36:00.691418: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (1): NVIDIA A100-SXM4-40GB, Compute Capability 8.0\n",
+      "2025-04-30 01:36:00.691421: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (2): NVIDIA A100-SXM4-40GB, Compute Capability 8.0\n",
+      "2025-04-30 01:36:00.691424: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (3): NVIDIA A100-SXM4-40GB, Compute Capability 8.0\n",
+      "2025-04-30 01:36:00.724790: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2025-04-30 01:36:00.793247: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:424] Loaded cuDNN version 8901\n",
+      "2025-04-30 01:36:00.993958: I ./tensorflow/compiler/jit/device_compiler.h:180] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    }
+   ],
    "source": [
     "taef.train_VAE(\n",
     "    datasets=datasets,\n",
